website/_versioned_docs/version-0.19/android-setup.md
---
id: version-0.19-android-setup
original_id: android-setup
title: android-setup
---
<a id="content"></a><h1>Android Setup</h1><div><p>This guide describes basic steps of the Android development environment setup that are required to run React Native android apps on an android emulator. We don't discuss developer tool configuration such as IDEs here.</p><h3><a class="anchor" name="install-git"></a>Install Git <a class="hash-link" href="#install-git">#</a></h3><ul><li><p><strong>On Mac</strong>, if you have installed <a href="https://developer.apple.com/xcode/" target="_blank">XCode</a>, Git is already installed, otherwise run the following:</p><div class="prism language-javascript"> brew install git</div></li><li><p><strong>On Linux</strong>, install Git <a href="https://git-scm.com/download/linux" target="_blank">via your package manager</a>.</p></li><li><p><strong>On Windows</strong>, download and install <a href="https://git-for-windows.github.io/" target="_blank">Git for Windows</a>. During the setup process, choose "Run Git from Windows Command Prompt", which will add Git to your <code>PATH</code> environment variable.</p></li></ul><h3><a class="anchor" name="install-the-android-sdk-unless-you-have-it"></a>Install the Android SDK (unless you have it) <a class="hash-link" href="#install-the-android-sdk-unless-you-have-it">#</a></h3><ol><li><a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html" target="_blank">Install the latest JDK</a></li><li>Install the Android SDK:<ul><li><strong>On Mac</strong>: <code>brew install android-sdk</code></li><li><strong>On Linux and Windows</strong>: <a href="https://developer.android.com/sdk/installing/index.html" target="_blank">Download from the Android website</a></li></ul></li></ol><h3><a class="anchor" name="define-the-android-home-environment-variable"></a>Define the ANDROID_HOME environment variable <a class="hash-link" href="#define-the-android-home-environment-variable">#</a></h3><p><strong>IMPORTANT</strong>: Make sure the <code>ANDROID_HOME</code> environment variable points to your existing Android SDK:</p><ul><li><p><strong>On Mac</strong>, add this to your <code>~/.bashrc</code>, <code>~/.bash_profile</code> or whatever your shell uses:</p><div class="prism language-javascript"># If you installed the SDK via Homebrew<span class="token punctuation">,</span> otherwise <span class="token operator">~</span><span class="token operator">/</span>Library<span class="token operator">/</span>Android<span class="token operator">/</span>sdk
export ANDROID_HOME<span class="token operator">=</span><span class="token operator">/</span>usr<span class="token operator">/</span>local<span class="token operator">/</span>opt<span class="token operator">/</span>android<span class="token operator">-</span>sdk</div></li><li><p><strong>On Linux</strong>, add this to your <code>~/.bashrc</code>, <code>~/.bash_profile</code> or whatever your shell uses:</p><div class="prism language-javascript">export ANDROID_HOME<span class="token operator">=</span>&lt;path_where_you_unpacked_android_sdk<span class="token operator">&gt;</span></div></li><li><p><strong>On Windows</strong>, go to <code>Control Panel</code> -&gt; <code>System and Security</code> -&gt; <code>System</code> -&gt; <code>Change settings</code> -&gt; <code>Advanced</code> -&gt; <code>Environment variables</code> -&gt; <code>New</code></p></li></ul><p><strong>NOTE</strong>: You need to restart the Command Prompt (Windows) / Terminal Emulator (Mac OS X, Linux) to apply the new Environment variables.</p><h3><a class="anchor" name="use-gradle-daemon"></a>Use gradle daemon <a class="hash-link" href="#use-gradle-daemon">#</a></h3><p>React Native Android use <a href="https://docs.gradle.org" target="_blank">gradle</a> as a build system. We recommend to enable gradle daemon functionality which may result in up to 50% improvement in incremental build times for changes in java code. Learn <a href="https://docs.gradle.org/2.9/userguide/gradle_daemon.html" target="_blank">here</a> how to enable it for your platform.</p><h3><a class="anchor" name="configure-your-sdk"></a>Configure your SDK <a class="hash-link" href="#configure-your-sdk">#</a></h3><ol><li>Open the Android SDK Manager (<strong>on Mac</strong> start a new shell and run <code>android</code>); in the window that appears make sure you check:<ul><li>Android SDK Build-tools version 23.0.1</li><li>Android 6.0 (API 23)</li><li>Android Support Repository</li></ul></li><li>Click "Install Packages"</li></ol><p><img src="img/AndroidSDK1.png" alt="SDK Manager window"> <img src="img/AndroidSDK2.png" alt="SDK Manager window"></p><h3><a class="anchor" name="install-genymotion"></a>Install Genymotion <a class="hash-link" href="#install-genymotion">#</a></h3><p>Genymotion is much easier to set up than stock Google emulators. However, it's only free for personal use. If you want to use the stock Google emulator, see below.</p><ol><li>Download and install <a href="https://www.genymotion.com/" target="_blank">Genymotion</a>.</li><li>Open Genymotion. It might ask you to install VirtualBox unless you already have it.</li><li>Create a new emulator and start it.</li><li>To bring up the developer menu press ⌘+M</li></ol><h3><a class="anchor" name="alternative-create-a-stock-google-emulator"></a>Alternative: Create a stock Google emulator <a class="hash-link" href="#alternative-create-a-stock-google-emulator">#</a></h3><ol><li>Start a new shell and run <code>android</code>; in the window that appears make sure you check:<ul><li>Intel x86 Atom System Image (for Android 5.1.1 - API 22)</li><li>Intel x86 Emulator Accelerator (HAXM installer)</li></ul></li><li>Click "Install Packages".</li><li><a href="http://developer.android.com/tools/devices/emulator.html#vm-mac" target="_blank">Configure hardware acceleration (HAXM)</a>, otherwise the emulator is going to be slow.</li><li>Create an Android Virtual Device (AVD):<ol><li>Run <code>android avd</code> and click on <strong>Create...</strong>
<img src="img/CreateAVD.png" alt="Create AVD dialog"></li><li>With the new AVD selected, click <code>Start...</code></li></ol></li><li>To bring up the developer menu press F2 (or install <a href="http://getfrappe.com" target="_blank">Frappé</a>)</li></ol><h3><a class="anchor" name="windows-hyper-v-alternative"></a>Windows Hyper-V Alternative <a class="hash-link" href="#windows-hyper-v-alternative">#</a></h3><p>The <a href="https://www.visualstudio.com/en-us/features/msft-android-emulator-vs.aspx" target="_blank">Visual Studio Emulator for Android</a> is a free android emulator that is hardware accelerated via Hyper-V. It doesn't require you to install Visual Studio at all.</p><p>To use it with react-native you just have to add a key and value to your registry:</p><ol><li>Open the Run Command (Windows+R)</li><li>Enter <code>regedit.exe</code></li><li>In the Registry Editor navigate to <code>HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Android SDK Tools</code></li><li>Right Click on <code>Android SDK Tools</code> and choose <code>New &gt; String Value</code></li><li>Set the name to <code>Path</code></li><li>Double Click the new <code>Path</code> Key and set the value to <code>C:\Program Files\Android\sdk</code>. The path value might be different on your machine.</li></ol><p>You will also need to run the command <code>adb reverse tcp:8081 tcp:8081</code> with this emulator.</p><p>Then restart the emulator and when it runs you can just do <code>react-native run-android</code> as usual.</p></div><div class="docs-prevnext"><a class="docs-next" href="linux-windows-support.html#content">Next →</a></div>